--- a/src/App/Menu.form
+++ b/src/App/Menu.form
@@ -166,7 +166,7 @@
           <Font name="Goethe" size="48" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Nombre"/>
+        <Property name="text" type="java.lang.String" value="Insert Name"/>
         <Property name="toolTipText" type="java.lang.String" value="maximum 4 letters"/>
         <Property name="actionCommand" type="java.lang.String" value="&lt;Not Set&gt;"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
